changes in the link

--- a/5.css
+++ b/5.css
@@ -14,7 +14,7 @@ li{
 }
 
 body{
-    background-image: url("../images/pexels-jessica-ticozzelli-5670759.jpg");
+    background-image: url("pexels-jessica-ticozzelli-5670759.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 
