--- a/SelfHelp.css
+++ b/SelfHelp.css
@@ -14,7 +14,7 @@ li{
 }
 
 body{
-    background-image: url("../images/nat.jpeg");
+    background-image: url("nat.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
 
