--- a/moti.css
+++ b/moti.css
@@ -20,7 +20,7 @@ img{
     height: 150px;
 }
 body{
-    background-image: url("../images/pexels-jessica-ticozzelli-5670759.jpg");
+    background-image: url("pexels-jessica-ticozzelli-5670759.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 
